# daisy-synth

./: CMakeLists.txt  DEVLOG.md  LICENSE  README.md  demo.c  demo.cpp  demo.h  update_deps.sh
common/: keyboard_piano.c  keyboard_piano.h  pitch_pressure_pad.c  pitch_pressure_pad.cpp  pitch_pressure_pad.h
demo/: demo.c  demo.cpp  keyboard_piano.c  keyboard_piano.h  synth.cpp  synth.h
demo2/: demo.c  demo.cpp  demo.h  keyboard_piano.cpp  keyboard_piano.h  synth.h
docs/: DEVLOG.md
s1/: s1.c  s1.cpp  s1.h  synth.cpp  synth.h
s12/: pitch_pressure_pad.cpp  pitch_pressure_t.h  s1.cpp  s1.h  synth.cpp  synth.h
sokol/: sokol.c
